# scale-decode

./: CHANGELOG.md  Cargo.toml  FILE_TEMPLATE  README.md  RELEASING.md
.github/workflows/: rust.yml
examples/: value_type.rs
scale-decode/: Cargo.toml  README.md
scale-decode-derive/: Cargo.toml  README.md
scale-decode-derive/src/: lib.rs
scale-decode/examples/: decode_as_type.rs  enum_decode_as_type.rs  struct_decode_as_type.rs  visitor.rs
scale-decode/src/: context.rs  error.rs  lib.rs
scale-decode/src/error/: context.rs  linkedlist.rs  mod.rs
scale-decode/src/impls/: mod.rs  primitive_types.rs
scale-decode/src/utils/: linkedlist.rs  mod.rs  stack_vec.rs
scale-decode/src/visitor/: array.rs  bit_sequence.rs  compact.rs  composite.rs  decode.rs  mod.rs  sequence.rs  str.rs  tuple.rs  variant.rs
scale-decode/src/visitor/ext/: and_then.rs  mod.rs
scale-decode/src/visitor/types/: array.rs  bit_sequence.rs  compact.rs  composite.rs  mod.rs  sequence.rs  str.rs  tuple.rs  variant.rs
scale-decode/tests/: macros.rs
scale-decode/tests/macros/: pass_derive_as_fields.rs  pass_derive_generics.rs  pass_derive_pub_struct.rs  pass_derive_random_attrs.rs  pass_derive_skipping.rs  pass_derive_struct.rs  pass_derive_variant.rs
src/: bit_sequence.rs  decode.rs  lib.rs  visitor.rs
src/utils/: mod.rs  stack_vec.rs
src/visitor/: array.rs  bit_sequence.rs  compact.rs  composite.rs  mod.rs  sequence.rs  str.rs  tuple.rs  variant.rs
testing/no_std/: Cargo.toml  README.md
testing/no_std/src/: lib.rs
