[workspace]
members = [
    "scale-decode",
    "scale-decode-derive",
    "testing/no_std",
]
resolver = "2"

[workspace.package]
version = "0.13.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/paritytech/scale-decode"
homepage = "https://www.parity.io/"
keywords = ["parity", "scale", "decoding"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[workspace.dependencies]
scale-decode = { version = "0.13.2", path = "scale-decode" }
scale-decode-derive = { version = "0.13.2", path = "scale-decode-derive" }
